# vehicle-color-detector

./: .gitignore  .gitmodules  LICENSE.md  README.md
ColorChooser/: CMakeLists.txt  ColorChooser.pro  colordetector.cpp  colordetector.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
